2003-06-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* etc/sn_prop.cfg.in: Enable text highlighting
	for phpbrowser.
	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: When the -h option
	is passed to phpbrowser, emit comment tokens
	and write highlight info to a file using
	the new sn_highlight function. Currently,
	only comments and strings are highlighted.
	* parsers/toolbox/snptools.c (sn_getopt,
	sn_process_options, sn_highlight,
	sn_register_filename, sn_close):
	Add support for -h command line option.
	This option will create a highlight file
	that can be written to using sn_highlight.
	Pass this highlight file name to put_file
	and write it to the file name passed in
	the -s option, if there was one.
	* parsers/toolbox/snptools.h: Add
	SN_OPT_HIGHLIGHT and a decl for
	sn_highlight.
	* tests/parsers/php.test: Add file
	highlight tests.
	* tests/parsers/testutil.tcl (browse_highlights):
	Add helper function to browse the contents
	of a highlight file generated with the -h
	and -s options.

2003-06-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: When text that does
	not match a known pattern is found, emit an
	UNKNOWN token and continue processing. Also
	emit a SOMEWORD token for a \$ sequence.
	* tests/parsers/php.test: Add test for UNKNOWN
	token and remove knownbug constraint from test
	that was failing. Add some FIXME notes.

2003-06-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Split the handling
	of ASSIGNMENT_OPERATOR and ASSIGNMENT_OPERATORS
	into two rules. This makes the var assignment
	simpler since the code does not need to
	inspect the matched tokens to determine what
	kind of access it was.

2003-06-05  Mo DeJong  <mdejong@users.sourceforge.net>

	* parsers/php/phpbrowser.c: Regen.
	* parsers/php/phpbrowser.l: Insert both
	a read xref and a write xref for variable
	operations like $var+=1.